--- a/app/src/main/res/layout/fmt_setting.xml
+++ b/app/src/main/res/layout/fmt_setting.xml
@@ -4,23 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="10"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="horizontal">
+    android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/number"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="8"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="7"/>
 
         <Button
+            android:id="@+id/btn_edit_number"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
             android:text="@string/edit_number"/>
-    </LinearLayout>
+
 </LinearLayout>
