--- a/app/src/main/res/layout/num_dialog.xml
+++ b/app/src/main/res/layout/num_dialog.xml
@@ -3,41 +3,65 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#fff"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:gravity="start"
-        android:text="@string/dialog_title"
-        android:textColor="#000"
-        android:textSize="20sp" />
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/findPwDialogNameTi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/inputNum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/dialog_num"
-            android:inputType="textPersonName"
-            android:textColorHint="#42000000" />
-    </android.support.design.widget.TextInputLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/dialog_comment"
-        android:textColor="#000"
-        android:textSize="16sp" />
+    android:orientation="vertical"
+    android:paddingLeft="15dp"
+    android:weightSum="10">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_weight="3">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:gravity="start"
+            android:text="@string/dialog_title"
+            android:textColor="#000"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginEnd="15dp"
+        android:layout_weight="5"
+        android:orientation="vertical">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/findPwDialogNameTi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/inputNum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/dialog_num"
+                android:inputType="textPersonName"
+                android:textColorHint="#42000000" />
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="@string/dialog_comment"
+            android:textColor="#000"
+            android:textSize="10sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_weight="2"
         android:gravity="end"
         android:orientation="horizontal"
         android:weightSum="10">
@@ -46,20 +70,22 @@
             android:id="@+id/btn_dialog_cancel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="4"
             android:gravity="center"
             android:text="@string/dialog_cancel"
             android:textColor="@color/colorAccent"
-            android:textSize="16sp" />
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/btn_dialog_save"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="4"
             android:gravity="center"
             android:text="@string/dialog_save"
             android:textColor="@color/colorAccent"
-            android:textSize="16sp" />
+            android:textSize="13sp" />
+
     </LinearLayout>
+
 </LinearLayout>
